Kết ca, mở ca, Hủy vé
hoàn thành kết ca, mở ca + sửa hủy vé